@@ -1,5 +1,5 @@
                     Java(TM) 2 SDK, Standard Edition
-                           Version 1.2.2_016
+                           Version 1.2.2_017
 
 This software and documentation is the confidential and proprietary 
 information of Sun Microsystems, Inc. ("Confidential Information").  
